<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:background="@color/my_blue"
    tools:context="com.nightonke.saver.activity.HelpActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:text="@string/hey"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:text="@string/thank"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:text="@string/me"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:text="@string/github"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:text="@string/blog"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:text="@string/thank_again"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />

    </android.support.v7.widget.CardView>

</LinearLayout>
