<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/register_user_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user_name"
        android:textColor="@color/drawer_text"
        android:textSize="12sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_user_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/drawer_text"
        android:textSize="20sp"
        android:hint=""
        android:singleLine="true"
        app:met_baseColor="@color/my_blue"
        app:met_maxCharacters="16"
        app:met_minCharacters="1"
        app:met_clearButton="true"
        />

    <TextView
        android:id="@+id/register_user_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user_email"
        android:textColor="@color/drawer_text"
        android:textSize="12sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_user_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/drawer_text"
        android:textSize="20sp"
        android:hint=""
        android:singleLine="true"
        app:met_baseColor="@color/my_blue"
        app:met_clearButton="true"
        />

    <TextView
        android:id="@+id/register_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_password"
        android:paddingTop="10dp"
        android:textColor="@color/drawer_text"
        android:textSize="12sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/drawer_text"
        android:textSize="20sp"
        android:hint=""
        android:singleLine="true"
        app:met_baseColor="@color/my_blue"
        app:met_minCharacters="1"
        app:met_clearButton="true"
        />

</LinearLayout>